# nitro-revm

./: Cargo.toml  Dockerfile.server  Makefile  README.md  nitro-revm.cmake
nitro-revm/: Cargo.toml
nitro-revm/src/: main.rs
nitro-revm/src/vsock_utils/: command_parser.rs  mod.rs  protocol_helpers.rs  utils.rs
revm-driver/: Cargo.toml  Dockerfile.client
revm-driver/src/: command_parser.rs  lib.rs  main.rs  utils.rs
revm-driver/src/encryption_helper/: kms_util.rs  mod.rs
src/: main.rs
x86_64-linux-musl-native/lib/: libatomic.so.1.2.0  libctf-nobfd.la  libgfortran.la  libgfortran.so.5.0.0  libgomp.la  libgomp.so.1.0.0  libitm.la  libopcodes.la  libquadmath.la  libquadmath.so.0.0.0  libssp.la  libssp.so.0.0.0  libsupc++.la
x86_64-linux-musl-native/libexec/gcc/x86_64-linux-musl/11.2.1/: g++-mapper-server  liblto_plugin.la  lto-wrapper
x86_64-linux-musl-native/x86_64-linux-musl/lib/ldscripts/: elf32_x86_64.xc  elf32_x86_64.xce  elf32_x86_64.xd  elf32_x86_64.xdc  elf32_x86_64.xdce  elf32_x86_64.xde  elf32_x86_64.xdw  elf32_x86_64.xdwe  elf32_x86_64.xe  elf32_x86_64.xs  elf32_x86_64.xsc  elf32_x86_64.xsce  elf32_x86_64.xse  elf32_x86_64.xswe  elf32_x86_64.xwe  elf_i386.xd  elf_i386.xde  elf_i386.xe  elf_i386.xs  elf_i386.xswe  elf_i386.xw  elf_iamcu.xc  elf_iamcu.xde  elf_iamcu.xdwe  elf_iamcu.xn  elf_iamcu.xs  elf_iamcu.xsce  elf_iamcu.xse  elf_iamcu.xswe  elf_k1om.xbn  elf_k1om.xc  elf_k1om.xce  elf_k1om.xdc  elf_k1om.xe  elf_k1om.xn  elf_k1om.xs  elf_k1om.xsc  elf_k1om.xse  elf_k1om.xsw  elf_k1om.xswe  (+22 more)
(+1 files in other folders)
