[package]
name = "revm_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.3.3", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
clap = "3.2"
log = "0.4"
nix = "0.20"
byteorder = "1.3"
mbedtls = { version = "0.7", default-features = true, features = ["rdrand"] }

aws-config= { version = "0.56.1"}
aws-sdk-kms= { version = "0.30.0"}
aws-smithy-client= { version = "0.56.1", features = ["client-hyper", "rustls", "rt-tokio"] }

[dependencies.tokio]
version = "1.20.1"
features = ["full"]